--- a/staticgen/src/staticgen/templates/package.jinja
+++ b/staticgen/src/staticgen/templates/package.jinja
@@ -10,7 +10,7 @@
   </h2>
   {% if pkg.meta.description %}<p>{{ pkg.meta.description }}</p>{% endif %}
   <ul>
-    <li>Name: <span>{{ name }}</span></li>
+    <li>Name: <span>{{ pkg.pname }}</span></li>
     <li>Version: <span>{{ pkg.version }}</span></li>
     {% if pkg.meta.homepage %}<li><a href="{{ pkg.meta.homepage }}">Homepage</a></li>{% endif %}
     {% if pkg.meta.position %}<li><a href="{{ pkg.meta.position }}">Source</a></li>{% endif %}
